Smart Failures Text Parser

--- a/SmartFailures/App.config
+++ b/SmartFailures/App.config
@@ -6,5 +6,7 @@
   <appSettings>
     <add key ="InputFilePath" value="C:\Users\ankit_000\Desktop\smart.log"/>
     <add key ="OutputFilePath" value="C:\Users\ankit_000\Desktop\SmartOut.txt"/>
+    <add key ="StartInfoSection" value="=== START OF INFORMATION SECTION ==="/>
+    <add key ="SmartFailureAttributeSection" value="ID# ATTRIBUTE_NAME          FLAG     VALUE WORST THRESH TYPE      UPDATED  WHEN_FAILED RAW_VALUE"/>
   </appSettings>
 </configuration>
