--- a/SmartFailures/App.config
+++ b/SmartFailures/App.config
@@ -4,8 +4,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key ="InputFilePath" value="C:\Users\ankit_000\Desktop\smart.log"/>
-    <add key ="OutputFilePath" value="C:\Users\ankit_000\Desktop\SmartOut.txt"/>
+    <add key ="InputFilePath" value=""/>
+    <add key ="OutputFilePath" value=""/>
     <add key ="StartInfoSection" value="=== START OF INFORMATION SECTION ==="/>
     <add key ="SmartFailureAttributeSection" value="ID# ATTRIBUTE_NAME          FLAG     VALUE WORST THRESH TYPE      UPDATED  WHEN_FAILED RAW_VALUE"/>
   </appSettings>
